s390-dasd (0.0.7) UNRELEASED; urgency=low

  * Bastian Blank
    - Update templates.
  * Christian Perrier
    - Remove jargon in templates

 -- Christian Perrier <bubulle@kheops.frmug.org>  Mon, 28 Jun 2004 10:24:26 +0200

s390-dasd (0.0.6) unstable; urgency=low

  * Bastian Blank
    - Fix dependencies and call dh_shlibdeps.
    - Provide harddrive-detection.
  * Updated translations: 
    - Albanian (sq.po) by Elian Myftiu
    - Welsh (cy.po) by Dafydd Harries
    - Spanish (es.po) by Javier Fernandez-Sanguino Peña
    - Basque (eu.po) by Piarres Beobide Egaña
    - Finnish (fi.po) by Tapio Lehtonen
    - Gallegan (gl.po) by Héctor Fernández López
    - Hebrew (he.po) by Lior Kaplan
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Lithuanian (lt.po) by Marius Gedminas
    - Norwegian (nb.po) by Bjørn Steensrud
    - Norwegian (nn.po) by Håvard Korsvoll
    - Romanian (ro.po) by Eddy Petrisor
    - Turkish (tr.po) by Osman Yüksel
    - Traditional Chinese (zh_TW.po) by Tetralet
    
 -- Bastian Blank <waldi@debian.org>  Mon, 14 Jun 2004 14:06:55 +0200

s390-dasd (0.0.5) unstable; urgency=low

  * Ming Hua
    - Initial Simplified Chinese translation (zh_CN.po)
    - Initial Traditional Chinese translation (zh_TW.po), by Tetralet
    - Updated Traditional Chinese translation (zh_TW.po), by Tetralet
  * Bartosz Fenski
    - Updated Polish (pl) translation.
  * Javier Fernandez-Sanguino:
    - Added Spanish translation
  * Kenshi Muto
    - Added Japanese translation (ja.po)
    - Update ja.po
  * Miroslav Kure
    - Added Czech translation (cs.po)
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Bart Cornelis
    - updated dutch translation (nl.po)
    - Merged Norwegian Bokmael (nb.po) translations from skolelinux-cvs
    - Merged Norwegian Nynorsk (nn.po) translations from skolelinux-cvs
  * Alastair McKinstry
    - Move to debconfclient from debconf.
    - Move to debconf_*() macros.
  * Denis Barbier