@@ -4,6 +4,8 @@ s390-dasd (0.0.7) UNRELEASED; urgency=low
     - Update templates.
   * Christian Perrier
     - Remove jargon in templates
+  * Colin Watson
+    - Correct spelling of "formatted" (closes: #257174).
 
  -- Christian Perrier <bubulle@kheops.frmug.org>  Mon, 28 Jun 2004 10:24:26 +0200
 
